Trying to fix bullet alignment

--- a/docs/_static/conf/scss/main-2026.scss
+++ b/docs/_static/conf/scss/main-2026.scss
@@ -53,8 +53,8 @@ body .page-content ul {
 
     li {
         color: copy-color;
-        padding-left: 1em;
-        text-indent: -.7em;
+        padding-left: 1.4em;
+        text-indent: -1.4em;
 
         &:before {
             content: "•  ";
